update with asset js

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Unlock Test 1</title>
+    <title>Unlock Test 2</title>
   </head>
   <body>
 
   	<div class="container">
 	    <h1>Bienvenue aux Unlocks de Max</h1>
 	</div>
+  <script src="/assets/unlock-vendor-123.js"></script>
+  <script src="/assets/unlock-123.js"></script>
+
+    <div id="ember-bootstrap-wormhole"></div>
   </body>
 </html>
