--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     
 
-    <script src="assets/vendor-61f93413abc25542dd7af3b53fc756fb.js" integrity="sha256-KU29raT/oaiCnnusrNUVL9qAM1GGQJCWUm8CeAfSC+g= sha512-0qSlC3UZHQuutmL/3Qu+ghspTGHhbkvwhzOFpAyYO/RvyPKIXSW2hH+xu/bNxvZSsnZIJ9Ay6+slcnAZEzwXtQ==" ></script>
-    <script src="assets/unlock-4484a0ff35f842e744ea8690cc49a4f6.js" integrity="sha256-rzPpFbmlSCOX1Ryd77gARf55jOmm2AoGgl3j6HYC8V0= sha512-HTpV+iZL2jrLuL+tZ//6r0nz/+RuPmWW73i3XUNUpXWcCDT3TOLoltFCrmKRbpBhrDhAFH5nGMNafq7CAiSsbg==" ></script>
+    <script src="assets/vendor-61f93413abc25542dd7af3b53fc756fb.js"></script>
+    <script src="assets/unlock-4484a0ff35f842e744ea8690cc49a4f6.js"></script>
 
     <div id="ember-bootstrap-wormhole"></div>
   </body>
